<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.menschenb1.MainActivity"

    >


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_background_color"
            android:orientation="vertical"


            >


            <TextView

                android:id="@+id/lesson_1"
                style="@style/CategoryStyle"
                android:background="@color/lesson1_color"
                android:text="@string/lesson1_title" />

            <TextView

                android:id="@+id/lesson_2"
                style="@style/CategoryStyle"
                android:background="@color/lesson2_color"
                android:text="@string/lesson2_title" />

            <TextView

                android:id="@+id/lesson_3"
                style="@style/CategoryStyle"
                android:background="@color/lesson3_color"
                android:text="@string/lesson3_title" />

            <TextView

                android:id="@+id/lesson_4"
                style="@style/CategoryStyle"
                android:background="@color/lesson4_color"
                android:text="@string/lesson4_title" />

            <TextView

                android:id="@+id/lesson_5"
                style="@style/CategoryStyle"
                android:background="@color/lesson5_color"
                android:text="@string/lesson5_title" />

            <TextView

                android:id="@+id/lesson_6"
                style="@style/CategoryStyle"
                android:background="@color/lesson6_color"
                android:text="@string/lesson6_title" />

            <TextView

                android:id="@+id/lesson_7"
                style="@style/CategoryStyle"
                android:background="@color/lesson7_color"
                android:text="@string/lesson7_title" />

            <TextView

                android:id="@+id/lesson_8"
                style="@style/CategoryStyle"
                android:background="@color/lesson8_color"
                android:text="@string/lesson8_title" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>